<resources>
    <string name="app_name">GoGreen</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">GoGrren</string>
    <string name="nav_header_subtitle">Shailaja Chauahan</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_dash_board">DashBoard</string>
    <string name="dashboard">Dashboard</string>
    <string name="attendance">Attendance</string>
    <string name="notes">Notes</string>
    <string name="assignment">Assignment</string>
    <string name="result">Result</string>
    <string name="notification">Notification</string>
    <string name="professoor">Professor</string>
    <string name="professor">Professor</string>
    <string name="tv_subject">Subject</string>
    <string name="tv_title">Welcome To Uvpce Moodle</string>
    <string name="title_activity_subject">Subject</string>
    <string name="application_devlopment">Application Devlopment</string>
    <string name="cloud_computing">Cloud Computing</string>
    <string name="internet_security_services">Internet Security Services</string>
    <string name="apptitude_skill_buliding">Apptitude Skill Buliding</string>
    <string name="software_engineering">Software Engineering</string>
    <string name="theory_of_computation">Theory Of Computation</string>
    <string name="pravesh_s_patel">Pravesh S. Patel</string>
    <string name="ritesh_upadhyay">Ritesh Upadhyay</string>
    <string name="ravi_f_raval">Ravi F. Raval</string>
    <string name="menka_n_patel">Menka N. Patel</string>
    <string name="paresh_m_solanki">Paresh M. Solanki</string>
    <string name="bavin_n_joshi">Bavin N. Joshi</string>
    <string name="hitesh_d_rajput">Hitesh D. Rajput</string>
    <string name="hiteshri_n_patel">Hiteshri N. Patel</string>
    <string name="keyur_a_jani">Keyur A. Jani</string>

</resources>
