<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">


        <item
            android:id="@+id/nav_dashboard"
            android:title="@string/dashboard" />
        <item
            android:id="@+id/nav_attendance"
            android:title="@string/attendance" />
        <item
            android:id="@+id/nav_notes"
            android:title="@string/notes" />
        <item
            android:id="@+id/nav_assignment"
            android:title="@string/assignment" />
        <item
            android:id="@+id/nav_result"
            android:title="@string/result" />

        <item
            android:id="@+id/nav_notification"
            android:title="@string/notification" />

    </group>



</menu>
