<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colordashboard"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".DashBoard">


    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="438dp"
        android:text="@string/tv_title"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="30sp"
        android:textStyle="bold"
        tools:text="Welcome to UVPCE moodle" />

    <TextView
        android:id="@+id/tv_prof"
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="78dp"
        android:layout_marginTop="106dp"
        android:layout_marginEnd="76dp"
        android:layout_marginBottom="358dp"
        android:text="@string/professor"
        android:textColor="@android:color/holo_red_light"
        android:textSize="35sp"
        android:textStyle="bold"
        android:typeface="normal" />

    <TextView
        android:id="@+id/tv_subject"
        android:layout_width="238dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="80dp"
        android:layout_marginTop="180dp"
        android:layout_marginEnd="91dp"
        android:layout_marginBottom="284dp"
        android:text="@string/tv_subject"
        android:textColor="@android:color/holo_red_light"
        android:textSize="35sp"
        android:textStyle="bold"
        tools:text="Subject" />
</RelativeLayout>